Cabal-Version:      2.4
Name:               plutus-cardano-samples
Version:            0.1.0.0
Author:              Ernesto
Maintainer:          ernesto@emurgo.io
Build-Type:          Simple
Copyright:           © 2021 Emurgo
License:             Apache-2.0
License-files:       LICENSE

library
  hs-source-dirs:      src
  exposed-modules:     MathBounty
                     , MathBountyFilter
                     , MathBounty2
                     , GuessingGame
                     , MathBountyMultiStage                     
  build-depends:       aeson
                     , base ^>=4.14.1.0
                     , bytestring
                     , cardano-api
                     , containers
                     , data-default
                     , playground-common
                     , plutus-contract
                     , plutus-ledger
                     , plutus-ledger-api
                     , plutus-ledger-constraints
                     , plutus-tx-plugin
                     , plutus-tx
                     , serialise
                     , text
                     , lens
  default-language:    Haskell2010
  ghc-options:         -Wall -fobject-code -fno-ignore-interface-pragmas -fno-omit-interface-pragmas -fno-strictness -fno-spec-constr -fno-specialise  -fplugin-opt PlutusTx.Plugin:defer-errors
